# BPEI-Utility-functions

./: .gitignore  README.md  Utility_functions.ipynb
Rxcode_lookup/: main.py  testing.py
Util_functions/: copy_parquet.py  download_s3_files.py  patientID_txt_to_csv.py  rename_csv_files.py  s3_parquet_to_csv.py
colmap/: vid2img.py
cosmos report/: Cosmos_report.py  capture.py  detect.py  export_pdf.py  main.py  sharex_to_pdf.py  sharex_to_pdfV2.py  sharex_to_pdfV3.py  smart_stitch.py  smart_stitch_cv.py  smart_stitch_old.py  stitch.py  stitch_corr.py  test_scrolling.py  testreport.py
project_keeping/: 05292026 combined_project_summary.csv  05292026 combined_project_summary.xlsx  Project Time Report - COSMOS.csv  Project Time Report - IRIS.csv  process_csv.py  process_csv_v2.py  project_submission_dates.csv
project_scaffolder/: LICENSE  README.md  project_old.toml  pyproject.toml
project_scaffolder/src/: cli.py  form_parser.py  project_numbering.py  scaffold_core.py  scaffold_r.py  utils.py
project_scaffolder/test/: test_parser.py
